syntax = "proto3";

message ClientMessage {
  message Ack {
    uint32 newBaseline = 1;
  }

  message VerifyRtc {
    string uuid = 1;
  }

  oneof msgData {
    Ack ack = 1;
    Command command = 2;
    VerifyRtc veryfiyRtc = 100;
  }
}

message Command {
  message MoveCommand {
    float x = 1;
    float y = 2;
    bool isAttack = 3;
  }

  message MoveDelta {
    float x = 1;
    float y = 2;
  }

  message Attack {
    uint32 target = 1;
  }

  message Stop { }
  message Recall { }

  oneof command {
    MoveCommand moveCommand = 1;
    MoveDelta moveDelta = 2;
    Attack attack = 3;
    Ability ability = 4; //TODO DEFINE THIS!
    Stop stop = 5;
    Recall recall = 6;
  }
}

message Ability {
  //Define
  enum AbilityDataType {
    SIMPLE = 0;
    TARGETED = 1;
    AIMED = 2;
  }

  message TargetedAbilityData {
    uint32 target = 1;
  }

  message AimedAbilityData {
    float x = 1;
    float y = 2;
  }
  //End Definition

  //Message Data
  int32 abilityID = 1;
  oneof abilityData {
    TargetedAbilityData targetedAbilityData = 2;
    AimedAbilityData aimedAbilityData = 3;
  }
}